[package]
name = "string-sum"
version = "0.1.0"
edition = "2018"

[lib]
#name = "string_sum"
name = "custom_name"

# produce shared library for Python to import from
crate-type = ["cdylib"]

[dependencies.pyo3]
# version = "0.15.1" # this was in the user guide, but my Python version is incompatible
#version = ">=0.22"
version = "0.27.2"
features = ["extension-module"]
